--- a/catdog/src/main/webapp/resources/css/storemain.css
+++ b/catdog/src/main/webapp/resources/css/storemain.css
@@ -7,12 +7,18 @@
 	width: 200px;
 	height: 150px;
 }
-.menu{
+.menu10{
 	border: 5px solid yellow;
 	display: grid;
 	grid-template-columns:1fr 1fr;
 	height: 200px;
 	padding: 5px;
-	
-	
+}
+.submenu{
+  display: inline-block;
+  position: sticky;
+  top: 30px;
+  width: 150px;
+  height: 200px;
+  border: 3px;
 }
