--- a/catdog/src/main/webapp/resources/css/mainht.css
+++ b/catdog/src/main/webapp/resources/css/mainht.css
@@ -51,8 +51,6 @@ button {
 
 .myMenu a {
 	text-decoration: none;
-	color: #646464;
-	font-size: 16px;
 }
 
 .mybtn1 {
@@ -142,6 +140,10 @@ button {
 
 #mainMenu li .submenu1 li {
 	display: block;
+}
+
+#mainMenu li .submenu1 a {
+	color: white;
 }
 
 #mainMenu li .submenu1 li:hover {
