--- a/catdog/src/main/webapp/resources/css/main.css
+++ b/catdog/src/main/webapp/resources/css/main.css
@@ -33,7 +33,7 @@
 .banner { 
 	width: 100%; 
 	height: 100px;
-	margin-bottom: 50px;
+	margin: 0 auto;
 } 
 .banner > ul { 
 	overflow: hidden; 
@@ -97,6 +97,9 @@
 	font-family: 'Signika', sans-serif;
 }
 
+.box3{
+	margin-top: 100px;
+}
 .box4 {
     width: 90%;
     height: 600px;
