--- a/catdog/src/main/webapp/resources/css/core.css
+++ b/catdog/src/main/webapp/resources/css/core.css
@@ -12,7 +12,8 @@
 
 .body-left{
     float:left;
-    width: 230px;
+    width: 220px;
+    margin-top: 70px;
 }
 
 .body-right{
@@ -29,20 +30,20 @@
 }
 
 /* left menu */
-.list-group{
+.list-group {
     box-sizing: border-box;
     padding-left: 0;
     margin-bottom: 20px;
     width: 210px;    
     min-height: 500px;
     border-radius: 4px;    
-    box-shadow: 0 1px 2px rgba(0,0,0,.075);
+    position: fixed;
 }
 
 .list-group .lefthead {
     color: #ffffff;    
-    background-color: #337ab7;    
-    border-color: #337ab7;
+    background-color: #ababab;    
+    border-color: #ababab;
     font-family: "Malgun Gothic", "Nanum Gothic", "Dotum";
     font-size: 14px;
     font-weight: bold;    
@@ -78,7 +79,6 @@
     background: none;
     background-color: #F6F6F6;
     border-color: #D5D5D5;
-    text-shadow: 0 -1px 0 #286090;
 }
 
 a.list-group-item:hover{
