--- a/catdog/src/main/webapp/resources/css/mypage.css
+++ b/catdog/src/main/webapp/resources/css/mypage.css
@@ -33,14 +33,14 @@
 }
 
 .mypage {
-	margin: 50px auto;
+	margin: 30px auto;
 	width: 800px;
 	border: 1px solid #71da65;
 	padding: 15px;
 }
 
 .mypagetab {
-	margin: 5px;
+	margin: 10px;
 }
 
 .mypagetab::after {
@@ -67,10 +67,14 @@
 
 .mypagesub2 {
 	background: #71da65;
-	padding: 10px;
 	border-radius: 10px;
 	color: white;
 	font-weight: bold;
+}
+
+.mypagesub1 ul {	
+	margin: 10px;
+	padding: 10px;
 }
 
 .mypagesub1 li {
