--- a/catdog/src/main/webapp/resources/css/main.css
+++ b/catdog/src/main/webapp/resources/css/main.css
@@ -19,16 +19,23 @@
 }
 
 .boxText h2 {
-	justify-content:flex-start;
-	align-items: center;
-	line-height: 50px;
     font-size: 50px;
-    font-weight: 500;
-    max-height: 148px;
-    width: 580px; 
+    font-weight: 500px;
+    max-height: 100px;
     color: #ffffff;
-    font-family: 'Signika', sans-serif;
+  	font-family: 'Nanum Gothic', sans-serif;
+    margin-top: 100px;
+    margin-left: 30px;
 }
+
+.boxText p {
+    font-size: 30px;
+    font-weight: 600px;
+    max-height: 100px;
+    color: #ffffff;
+  	font-family: 'Nanum Gothic', sans-serif;
+    margin-left: 80px;
+}    
 
 .banner { 
 	width: 100%; 
@@ -43,10 +50,13 @@
 	text-align: center;
 }
 .bn1 {
-	background-color: #FAF4C0;
+	background-color: #F8E0E6;
 }
 .bn2 {
 	background-color: #616f8c;
+}
+.bn3 {
+	background-color: #FAF4C0;
 }
 
 .tab-menu{
@@ -55,14 +65,14 @@
 	border-radius: 10px;
 }
 
-.tab-menu >li {
+.tab-menu > li {
 	float: left;
 	width: 50px;
-	list-style: none;
 	text-align: center;
+	list-style:none;
 	background-color: #F6F6F6;
 	text-decoration: none;
-	
+	margin-bottom: 20px;
 }
 
 .tab-menu > li:hover {
@@ -71,6 +81,7 @@
 	border-radius: 10px;
 	cursor: pointer;
 }
+
 .boardContainer {
 	width: 100%;
 	height: 1000px;
@@ -100,50 +111,61 @@
 .box3{
 	margin-top: 100px;
 }
-.box4 {
-    width: 90%;
-    height: 600px;
-    margin: 0 auto;
-    align: center;
+
+.rcmBox {
+	display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: center;
+    width: 100%; 
+    height:550px; 
+    padding: 20px;
 }
 
-.box4p1 {
+.rcmPhoto1{
 	background-image:url('img/product.jpg');
 	background-size: cover;
 	background-repeat: no-repeat;
     box-sizing: border-box;
 	border: 1px solid #FFF;
 	border-radius: 20px;
-    width: 30%;
-	height: 350px;
-	float:left; 
 }
 
-.box4p2 {
+.rcmPhoto2{
 	background-image:url('img/product2.jpg');
 	background-size: cover;
 	background-repeat: no-repeat;
     box-sizing: border-box;
 	border: 1px solid #FFF;
 	border-radius: 20px;
-	margin-left: 5%;
-    width: 30%;
-	height: 350px;
-	float:left; 
+}
+.rcmPhoto3{
+	background-image:url('img/product.jpg');
+	background-size: cover;
+	background-repeat: no-repeat;
+    box-sizing: border-box;
+	border: 1px solid #FFF;
+	border-radius: 20px;
 }
 
-.box4p3 {
+.rcmPhoto4{
 	background-image:url('img/product3.jpg');
 	background-size: cover;
 	background-repeat: no-repeat;
     box-sizing: border-box;
 	border: 1px solid #FFF;
 	border-radius: 20px;
-    width: 30%;
-	height: 350px;
-	float: right;
 }
 
+.rcminfo p {
+	font-family: 'Nanum Gothic', sans-serif;
+	font-size: 20px;	
+}
+.rcminfo h2 {
+	text-align: right;
+	font-family: 'Nanum Gothic', sans-serif;
+	font-size: 30px;
+}
 
 .content_box {
 	overflow:hidden;
@@ -171,3 +193,28 @@ h1 {
 	font-family: 'Signika', sans-serif;
 }
 
+.sellBox{
+	display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: center;
+    width: 100%; 	
+}
+
+.sellBoxWrap h2{
+	text-align: center; 
+	margin: 80px auto; 
+	font-size: 30px;
+	font-family: 'Nanum Gothic', sans-serif;
+}
+
+.sellboxPhoto1 {
+	background-image:url('img/product3.jpg');
+	background-size: cover;
+	background-repeat: no-repeat;
+}
+.sellboxPhoto2 {
+	background-image:url('img/product3.jpg');
+	background-size: cover;
+	background-repeat: no-repeat;
+}
