--- a/catdog/src/main/webapp/resources/css/board.css
+++ b/catdog/src/main/webapp/resources/css/board.css
@@ -92,6 +92,7 @@
 	margin-bottom: 30px;
 	border: 1px solid #dadada;
 	border-radius: 10px;
+	min-height: 180px;
 }
 
 .articletitle {
@@ -124,14 +125,18 @@
 	display: inline-block;
 }
 
+.articlecontent {
+	border-bottom: 1px solid #dadada;
+}
+
 .articlecontent ul {
 	padding: 15px;
 	margin: 15px;
-	border-bottom: 1px solid #dadada;
 }
 
 .articlebtn {
 	text-align: right;
+	margin-top: 15px;
 }
 
 .comment {
