--- a/catdog/src/main/webapp/resources/css/board.css
+++ b/catdog/src/main/webapp/resources/css/board.css
@@ -165,7 +165,6 @@ button {
 }
 
 .comment {
-	border-bottom: 1px solid #dadada;
 	padding-bottom: 10px;
 }
 
@@ -185,6 +184,7 @@ button {
 .commentcount {
 	font-size: 30px;
 	color: #71da65;
+	padding-left: 5px;
 }
 
 .commentinput li .mybtn2 {
@@ -516,6 +516,7 @@ button {
 	border: 1px solid #dadada;
 	border-radius: 10px; 
 	padding-top: 20px;
+	margin-bottom: 30px;
 }
 
 .fleagoods {
