--- a/catdog/src/main/webapp/resources/css/board.css
+++ b/catdog/src/main/webapp/resources/css/board.css
@@ -12,7 +12,7 @@ button {
 
 .board {
 	width: 900px;	
-	margin: 100px auto;
+	margin: 70px auto;
     padding: 25px;
 }
 
@@ -198,6 +198,7 @@ button {
 	text-align: left;
 	border-bottom: 1px solid #dadada;
 	padding-bottom: 20px;
+	min-height: 60px;
 }
 
 .replylist {
@@ -231,6 +232,8 @@ button {
 .commentwrap {
 	display: inline-block;
 	margin-left: 15px;
+	max-width: 700px;
+    word-break: break-all;
 }
 
 .commentwrap textarea {
@@ -560,4 +563,23 @@ button {
 	border-bottom: 1px solid #dadada;
 	padding: 5px;
 	height: 50px;
+}
+
+.dealTypebtn {
+	margin: 5px;
+    padding: 0 20px;    
+    border: 1px solid #ddd;
+    color: #666;
+    border-radius: 45px;
+    background-color: #fff;
+    height: 35px;
+    font-size: 13px;
+    line-height: 33px;    
+    font-weight: 700;
+}
+
+.grabtn {
+	border: 0;
+    color: #fff;
+    background: #71da65;
 }
