--- a/catdog/src/main/webapp/resources/css/storemain.css
+++ b/catdog/src/main/webapp/resources/css/storemain.css
@@ -1,15 +1,17 @@
 @charset "UTF-8";
 
-.slider img {
-	width: 500px; height: 270px;
+.slider {
+	width: 100%; height: 270px;
 }
+
+
 
 .big{
 	width: 200px;
 	height: 150px;
 }
 .menu10{
-	border: 5px solid yellow;
+
 	display: grid;
 	grid-template-columns:1fr 1fr;
 	height: 200px;
