마이페이지 작성글,포인트

--- a/catdog/src/main/webapp/resources/css/mypage.css
+++ b/catdog/src/main/webapp/resources/css/mypage.css
@@ -407,3 +407,12 @@
     border-bottom: 1px solid #eee;
     vertical-align: middle;
 }
+
+.list-sort input[type=radio] {
+	display: none;
+}
+
+.sortchecked {
+	color: #71da65;
+	font-weight: bold;
+}
