--- a/catdog/src/main/webapp/resources/css/doctor.css
+++ b/catdog/src/main/webapp/resources/css/doctor.css
@@ -1,22 +1,22 @@
 @charset "UTF-8";
 
 .imgLayout{
-	width: 280px;
-	height: 300px;
-	padding: 10px 5px 10px;
-	margin: 5px;
-	border: 5px solid #F6F6F6;
-	background-color: #F6F6F6;
+	width: 300px;
+	height: 360px;
+	padding: 20px 10px 20px;
+	margin: 2px;
+	border: 1px solid #e4e4e4;
 	cursor: pointer;
 	border-radius: 10px;
-	
+	margin: 8px 10px;	
 }
 .subject {
 	width: 250px;
-	height: 100px;
+	height: 150px;
 	line-height:25px;
 	margin:10px auto;
-	border-top: 1px solid #DAD9FF;
+	border-top: 3px dotted #9FC93C;
+	margin-top:10px;
 	display: inline-block;
 	white-space:nowrap;
 	overflow:hidden;
@@ -57,6 +57,15 @@
   	margin-bottom: 5px;
 }
 
+.boxText h3 {
+	font-size: 20px;
+    font-weight: 30px;
+    max-height: 80px;
+    color: #b0b0b0;
+  	font-family: 'Nanum Gothic', sans-serif;
+  	margin-bottom: 10px;
+}
+
 .boxText p {
     font-size: 15px;
     max-height: 100px;
@@ -72,7 +81,7 @@
 }
 
 .searchBtn {
-	
 	border-bottom-color: #71DA65;
 }
+
 
